--- a/src-cs/BotSinais.Domain/BotSinais.Domain.csproj
+++ b/src-cs/BotSinais.Domain/BotSinais.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Modules\DataManagement\App\" />
+    <Folder Include="Modules\TradingData\App\" />
   </ItemGroup>
 
 </Project>
